@startuml "Model"

entity User {
    + Id : int
    + Firstname : string
    + Lastname : string
    + Email : string
    + Salt : string
    + PasswordHash : string
}

entity Account {
    + Id : int
    + Name : string
}

entity Posting {
    + Id
    + From : Account
    + To : Account
    + Amount : decimal
    + Date: DateTime
}

Posting o--> Account : "> From"
Posting o--> Account : "> To"

@enduml